# embarcatech_misc

./: README.md  info_bitdoglab.txt  info_c_sdk.txt  info_hw_api.txt  info_pico_w.txt  info_rp2040.txt
snake_game/: CMakeLists.txt  README.md  reload.sh
snake_game/src/: bdl_ws2812.h  snake.c  ws2812.pio
tarefa_u04_c01_morsecode/: diagram.json  main.c
tarefa_u04_c02_keypad/: CMakeLists.txt  README.md  diagram.json
u03_c03_tarefa_cnpf/: README.md  cnpf.c
u04_bdl_blink/: CMakeLists.txt  main.c  readme.txt
u04_bdl_buzzer/: CMakeLists.txt  main.c  readme.txt
u04_blink/: CMakeLists.txt  readme.txt  reload.sh  rp2040_blink.c
u04_c02_tarefa01_keypad/: README.md  main.c
u04_c02_tarefa02_bitdoglab_serial/: CMakeLists.txt  README.md  main.c  reload.sh
u04_c02_tarefa_keypad/: README.md  wokwi.toml
u04_c03_tarefa01_ledmatrix/: CMakeLists.txt  README.md  reload.sh
u04_c03_tarefa01_ledmatrix/src/: animations.inc  bdl_ws2812.h  main.c  ws2812.pio  ws2812.pio.h
u04_c04_tarefa01_irq_btn_incr/: CMakeLists.txt  README.md  reload.sh
u04_c04_tarefa01_irq_btn_incr/src/: bdl_ws2812.h  main.c
u04_c05_tarefa01_trafficlight/: CMakeLists.txt  README.md  main.c  reload.sh
u04_c05_tarefa01_trafficsign/: CMakeLists.txt  README.md  main.c  reload.sh
u04_c05_tarefa02_oneshottimer/: CMakeLists.txt  README.md  main.c  reload.sh
u04_c06_tarefa01_oled_i2c/: CMakeLists.txt  README.md  reload.sh
u04_c06_tarefa01_oled_i2c/src/: bdl_ssd1306.c  bdl_ssd1306.h  bdl_ws2812.c  bdl_ws2812.h  convfont.c  font.inc  main.c
u04_c07_tarefa01_servomotor/: diagram.json  main.c  readme.txt
u04_c08_tarefa01_joystick/: CMakeLists.txt  readme.txt  reload.sh
u04_c08_tarefa01_joystick/src/: bdl_ssd1306.c  bdl_ssd1306.h  main.c
